# robots_kinematics

./: README.md
robot_arm_interface/: CMakeLists.txt  package.xml
robot_arm_interface/action/: ArmControl.action
robot_arm_interface/include/robot_arm_interface/: ArmControlServer.h  ConfigParser.h  RobotArm.h
robot_arm_interface/msg/: ArmPose.msg  ArmState.msg  GripperPosition.msg  SingleJointPosition.msg
robot_arm_interface/resources/: robotArm.json  ssc32u.json
robot_arm_interface/src/: ArmControlServer.cpp  ConfigParser.cpp  RobotArm.cpp  main.cpp
robot_arm_interface/srv/: EmergencyStop.srv  GetArmState.srv
robot_controller/: CMakeLists.txt  package.xml
robot_controller/src/: Kinematics.cpp  Kinematics.h  Matrix.h  Matrix.ipp  RobotController.cpp  RobotController.h  main.cpp
robot_controller/srv/: ControlArm.srv  MoveObject.srv
robot_vision/: CMakeLists.txt  package.xml
robot_vision/batch/: batchfile.ini
robot_vision/calibration/: calibration.ini  calibrationbackup.ini  out_camera_data.xml
robot_vision/include/robot_vision/: Application.hpp  BatchApplication.hpp  CalibrationMode.hpp  Detection.hpp  Extraction.hpp  FilterExecutor.hpp  InteractiveApplication.hpp  MoveObjectClient.hpp  Parser.hpp  Specification.hpp  SpecificationConfig.hpp
robot_vision/src/: Application.cpp  BatchApplication.cpp  CalibrationMode.cpp  Detection.cpp  Extraction.cpp  FilterExecutor.cpp  InteractiveApplication.cpp  MoveObjectClient.cpp  Parser.cpp  Specification.cpp  main.cpp
ssc32u/: CMakeLists.txt  package.xml
ssc32u/include/ssc32u/: Commands.h  ConfigParser.h  Driver.h
ssc32u/src/: Commands.cpp  ConfigParser.cpp  Driver.cpp
