<?xml version="1.0"?>
<package format="2">
  <name>robot_vision</name>
  <version>0.0.0</version>
  <description>The robot_vision package</description>
  <maintainer email="TG.Klappe@student.han.nl">Ties</maintainer>
  <license>MIT</license>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>package</build_depend>
  <build_depend>robot_controller</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>